fix gap and oops content

--- a/app/styles/ess/_tool-tip--adjust.scss
+++ b/app/styles/ess/_tool-tip--adjust.scss
@@ -5,7 +5,7 @@
   }
 
   .rota-shift--solid::after {
-    content: "dsfsfsd";
+    content: "";
 
     display: block;
 
@@ -13,7 +13,7 @@
     height: 0;
 
     position: absolute;
-    bottom: rem(18);
+    bottom: rem(20);
     left: rem(8);
 
     border: {
